Vector fixes from trunk: r54764 Moved add topic into the view tabs (this will likely be the behavior until liquid threads is turned on, at which point this tab will be obsolete) r54793 Fixes incorrected sizing of preformatted text blocks (which use a monospaced font). r54806 When the text size is set in the body in EM, it affects all other em measurements, however if it's set in px it is both properly calculated on different screens (as oposed to pt in some cases) and does not distort the em calculations that follow. This is the best cross browser solution I have found so far, and fixes bug #20175.
git-svn-id: file:///home/git-svn-mirror/pushmi-svn-mirror/branches/wmf-deployment@54820 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/skins/vector/main-ltr.css
+++ b/skins/vector/main-ltr.css
@@ -21,7 +21,7 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: sans-serif;
-	font-size: 0.9em;
+	font-size: 13px;
 }
 body {
 	background-color: #f3f3f3;
